--- a/gen-lib/general.css
+++ b/gen-lib/general.css
@@ -23,3 +23,44 @@ border-radius: 30px;
 }
 
 /* Rounded Borders End */
+
+/* Margins Start */
+.m{margin: 5px;}
+.m10{margin: 10px;}
+.m15{margin: 15px;}
+.m20{margin: 20px;}
+.m25{margin: 25px;}
+.m30{margin: 30px;}
+.m35{margin: 35px;}
+.m100{margin: 100px;}
+.m250{margin: 250px;}
+.ml{  margin-left: 5px;}
+.ml10{margin-left: 10px;}
+.ml15{margin-left: 15px;}
+.ml20{margin-left: 20px;}
+.ml25{margin-left: 25px;}
+.ml30{margin-left: 30px;}
+.mla{margin-bottom: auto;}
+.mb{ margin-bottom: 5px;}
+.mb10{ margin-bottom: 10px;}
+.mb15{ margin-bottom: 15px;}
+.mb20{ margin-bottom: 20px;}
+.mb25{ margin-bottom: 25px;}
+.mb30{ margin-bottom: 30px;}
+.mba{ margin-bottom: auto;}
+.mt{margin-top: 5px;}
+.mt10{margin-top: 10px;}
+.mt15{margin-top: 15px;}
+.mt20{margin-top: 20px;}
+.mt25{margin-top: 25px;}
+.mt30{margin-top: 30px;}
+.mta{margin-top: auto;}
+
+.mr{margin-right: 5px;}
+.mr10{margin-right: 10px;}
+.mr15{margin-right: 15px;}
+.mr20{margin-right: 20px;}
+.mr25{margin-right: 25px;}
+.mr30{margin-right: 30px;}
+.mra{margin-right: auto;}
+/* Margins End */
